adding navigation page

--- a/gandhi photos.html
+++ b/gandhi photos.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet"  href="navigation.css">
 </head>
 <body>
+	<nav class="navbar">
+		<a href="register.html">register</a>
+		<a href="login.html">login</a>
+		<a href="web task.html">web task</a>
+		<a href="gandhi photos.html">gandhi photos</a>
+	</nav>
 	<img src="https://res.cloudinary.com/dkplc2mbj/image/upload/v1612161358/mahatma_gandhi_9a7bf75be9.jpg" width="25%"/>
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIVaG42tl2aFBXtp3GgNorMmoT3i9oILxloQ&usqp=CAU" width="25%/">
 	<img src="https://i.natgeofe.com/n/b2dcef04-abcb-42be-8472-e56913340aa2/gandhi-reference-02_3x2.jpg" width="25%"/>
