--- a/login.html
+++ b/login.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet"  href="navigation.css">
 </head>
 <body>
+	<nav class="navbar">
+		<a href="register.html">register</a>
+		<a href="login.html">login</a>
+		<a href="web task.html">web task</a>
+		<a href="gandhi photos.html">gandhi photos</a>
+	</nav>
 <form action= "web task.html">
 	<p>login page</p>
 	<p><input type="username" placeholder="username" /required></p>
