--- a/web task.html
+++ b/web task.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet"  href="navigation.css">
 </head>
 <body>
+	<nav class="navbar">
+		<a href="register.html">register</a>
+		<a href="login.html">login</a>
+		<a href="web task.html">web task</a>
+		<a href="gandhi photos.html">gandhi photos</a>
+	</nav>
 <a href="">mahatma gandhi</a><br/>
 	<img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Mahatma_Gandhi_photo.jpg" width="10%"/>
 	<p>Mohandas Karamchand Gandhi (/ˈɡɑːndi, ˈɡændi/; GAHN-dee; 2 October 1869 – 30 January 1948) was an Indian lawyer, anti-colonial nationalist and political ethicist who employed nonviolent resistance to lead the successful campaign for India's independence from British rule, and to later inspire movements for civil rights and freedom across the world. The honorific Mahātmā (Sanskrit: "great-souled", "venerable"), first applied to him in 1914 in South Africa, is now used throughout the world.</p>
