--- a/index.html
+++ b/index.html
@@ -2,29 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet"  href="navigation.css">
 </head>
 <body>
-	<form action="login.html">
-	<p align="center">Registration page</p>
-	<p><input type="text" placeholder="enter name"/required></p>
-	<p><input type="email number" placeholder="enter email address"/required></p>
-	<p><input type="password" placeholder="enter password"/required></p>
-	<p><input type="confirm password" placeholder="enter confirm password"/required></p>
-	<p><input type="date"/required></p>
-	<p><input type="radio" value="male" name="gender"required> male
-	   <input type="radio" value="female" name="gender"required>female
-	</p>
-	<p>
-		<input type="checkbox" value="mpc">MPC
-	   <input type="checkbox" value="cse">CSE
-	   <input type="checkbox" value="mpcs">MPCS
-	</p>
-	<p><input type="file"></p>
-	<p>
-		<button>submit</button>
-		<input type="reset"/ >
-    </p>
-</form>
+	<nav class="navbar">
+		<a href="register.html">register</a>
+		<a href="login.html">login</a>
+		<a href="web task.html">web task</a>
+		<a href="gandhi photos.html">gandhi photos</a>
+	</nav>
 
-</body> 
+</body>
 </html>
